BruteFIR v1.0m                                                 November 27, 2013
	 * Fixed SSE2 bug introduced in 1.0l.
	 * Added safety_limit feature to protect speakers.
	 * Fixed a rare race condition on multi-core.
	 * More sample format fixing, removed S16_4*, changed S24_4* to
	   represent low bits in sample, so it matches ALSA formats. If
	   you used S24_4LE in earlier versions you should now use S32_LE.

BruteFIR v1.0l                                                   October 6, 2013
	 * Made the code compile well on x86-64.
	 * Replaced legacy assembler code with new SSE/SSE2 C code,
	   3DNow support dropped.
	 * Fixed filter indexing bug in the 'cffa' CLI command.
	 * S24_LE now maps to Alsa SND_PCM_FORMAT_S24_3LE and S24_4LE to
	   SND_PCM_FORMAT_S24_LE (same for BE of course). Also added possibility
	   to use Alsa syntax "S24_3LE" in config file (means same as the old
	   "S24_LE").
	 * Refreshed JACK I/O module to make up to date with current API
	   versions.

BruteFIR v1.0k                                                    March 31, 2009
	* Refreshed ALSA and JACK I/O modules to make them up to date with
	  current API versions.

BruteFIR v1.0j                                                     March 5, 2009
	* Fixed a memory leak in the CLI.

BruteFIR v1.0i                                                   October 8, 2006
	* Adjusted how sleeping works in CLI script mode.
	* Minor sleep/script parse bug fixes in CLI logic module.
	* Minor ALSA I/O module bug fix.
	* No longer complain when trying to change static delays to same value.

BruteFIR v1.0h                                                     July 12, 2006
	* Added subsample delay feature
	* Added support for naming JACK ports.
	* Added support for text format in file I/O module.
	* Adjusted realtime priority logic modules (lowered it compared to the
	  filter process.
	* output_timed logic module callbacks now works.
	* Getting inplace plans from convolver_fftplan() now works.
