@@ -77,7 +77,8 @@ table, th, td {
 
 <h2 id="news">News</h2>
 <p><strong>2016-08-09</strong><br>
-Maintenance release 1.0n.
+Maintenance release 1.0n, for package maintenance. No functional
+change.
 
 <p><strong>2013-11-29</strong><br>
 There was still a typo in the last uploaded 1.0m affecting
